# support_portal

./: .gitignore  .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  requirements.txt  run_tests.yml  support_tests.yml
homework_06/web-app/: Dockerfile  app.py  config.py  entrypoint.sh  pyproject.toml
homework_06/web-app/migrations/versions/: 8f60831d1a45_.py  9427d3366fa9_.py  e3e4de3257d1_.py
homework_06/web-app/templates/: base.html
homework_06/web-app/templates/users/: add.html  base.html  details.html  index.html
homework_06/web-app/tests/: test_web_app.py
homework_06/web-app/web_app/models/: __init__.py  user.py
homework_06/web-app/web_app/views/: users.py
homework_09/support/: .gitignore  .travis.yml  pyproject.toml
homework_09/support/support_portal/: manage.py
homework_09/support/support_portal/news/: forms.py  models.py  urls.py  views.py
homework_09/support/support_portal/news/migrations/: 0001_initial.py  0002_alter_news_author_id.py  0002_auto_20210706_0740.py
homework_09/support/support_portal/news/templates/: base.html
homework_09/support/support_portal/news/tests/: test_models.py  test_views.py
homework_09/support/support_portal/projects/: forms.py  models.py  urls.py
homework_09/support/support_portal/projects/migrations/: 0001_initial.py  0003_alter_task_attachment.py  0004_alter_task_attachment.py  (+3 more)
homework_09/support/support_portal/support_portal/: asgi.py  settings.py  urls.py
homework_09/support/support_portal/templates/: index.html
homework_09/support/support_portal/users/: admin.py  models.py  urls.py
(+90 files in other folders)
